--- a/css/default.css
+++ b/css/default.css
@@ -36,5 +36,27 @@ dt{
 
 btn{
  -webkit-appearance: none;
+ -webkit-border-radius: 0;
  margin; 5px;
+ width: 100px;
+ height: 40px;
+ padding: 10px;
+ border: none;
+ font-size: 16px;
+}
+
+.btn:hover{/* マウスが乗った時 */
+   opacity: 0.7;
+}
+
+.btn:active{/* ボタンを押した時 */
+   color: white;
+}
+
+.btn-reset{
+   background-color: silver;
+}
+
+.btn-reset{
+    background-color: lightcoral;
 }
