--- a/css/default.css
+++ b/css/default.css
@@ -60,3 +60,23 @@ btn{
 .btn-reset{
     background-color: lightcoral;
 }
+
+#ingredient{
+   border: 2px solid lightcoral;
+   border-collapse: collapse;
+}
+
+th{
+   border: 1px solid lightcoral;
+   background-color: mistyrose;
+   paddng: 5px;
+   width: 100px;
+   text-align: center;
+}
+
+td{
+   border: 1px solid lightcoral;
+   pading: 5px;
+   width: 80px;
+   text-align: right;
+}
